web-infras/parser/tests/fixtures/babel/core/uncategorised/512/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,10)
1|function static() { "use strict"; }
 |        ^
[SyntaxError]: unexpect keyword in strict mode (1,10)
1|function static() { "use strict"; }
 |        ^
